--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
         </div>
         <div class="container-fluid">
             <div class="row">
-                <div class="col-md-3 images">
+                <div class="col-sm-2 col-md-3 images">
                     <img src="images/hazrat.jpg" alt="hazrat">
                     <img src="images/hazrat2.jpg" alt="secondpic">
                     <img src="images/rashan.jpg" alt="ration">
