--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="container-fluid">
         <div class="row header-upper">
-            <div class="col-lg-3">
+            <div class="col-md-3">
                 <div class="right">
                     <a href="#" class="fab fa-facebook-f"></a>
                     <a href="#" class="fab fa-twitter"></a>
@@ -312,24 +312,49 @@
             </div>
         </div>
     </section>
-
-    <section>>
-        <div class="col-md-12">
+<!-- 
+    <section>
+        <div>
             <h1><span class="blue">IMAGE</span><span class="secondGreen">GALLERY</span></h1>
             <img class="size" src="images/favicon.png" alt="favicon">
         </div>
         <div class="container-fluid">
             <div class="row">
-                <div class="col-sm-2 col-md-3 images">
-                    <img src="images/hazrat.jpg" alt="hazrat">
-                    <img src="images/hazrat2.jpg" alt="secondpic">
-                    <img src="images/rashan.jpg" alt="ration">
-                    <img src="images/rashan2.jpg" alt="secondpic">
+                <div class="col-md-3 images">
+
+
+
+
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     
+    <div class="conatiner">
+        <div class="row">
+            <div class="col-md-12">
+                <h1><span class="blue">IMAGE</span><span class="secondGreen">GALLERY</span></h1>
+                <img class="size" src="images/favicon.png" alt="favicon">
+            </div>
+        </div>
+        <div class="row images">
+            <div class="col-sm-6 col-md-2">
+                <img src="images/hazrat.jpg" alt="hazrat">
+            </div>
+            <div class="col-sm-6 col-md-2">
+                <img src="images/hazrat2.jpg" alt="secondpic">
+            </div>
+            <div class="col-sm-6 col-md-2">
+                <img src="images/rashan.jpg" alt="ration">
+            </div>
+            <div class="col-sm-6 col-md-2">
+                <img src="images/rashan2.jpg" alt="secondpic">
+            </div>
+            <div class="col-sm-6 col-md-2">
+                <img src="images/food.jpg" alt="food">
+            </div>
+        </div>
+    </div>
 
 
     <div class="container-fluid">
